openfgdb4j/native/include/openfgdb_c_api.h

OFGDB_API int ofgdb_add_coded_value(uint64_t db_handle, const char *domain_name, const char *code, const char *label);
OFGDB_API int ofgdb_assign_domain_to_field(uint64_t db_handle, const char *table_name, const char *column_name, const char *domain_name);
OFGDB_API int ofgdb_list_relationships(uint64_t db_handle, uint64_t *cursor_handle);
OFGDB_API int ofgdb_create_relationship_class(
    uint64_t db_handle,
    const char *name,
    const char *origin_table,
    const char *destination_table,
    const char *origin_pk,
    const char *origin_fk,
    const char *forward_label,
    const char *backward_label,
    const char *cardinality,
    int32_t is_composite,
    int32_t is_attributed
);
/* Convenience string APIs for Java FFM wrappers. The returned heap strings
 * are owned by the caller and must be freed with ofgdb_free_string().
 */
OFGDB_API int ofgdb_list_domains_text(uint64_t db_handle, char **out_text);