openfgdb4j/src/generated/java/ch/ehi/openfgdb4j/ffm/OpenFgdbNative.java


    private static class ofgdb_add_coded_value {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_add_coded_value").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_add_coded_value"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_add_coded_value(uint64_t db_handle, const char *domain_name, const char *code, const char *label)
     * }
     */
    public static FunctionDescriptor ofgdb_add_coded_value$descriptor() {
        return ofgdb_add_coded_value.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_add_coded_value(uint64_t db_handle, const char *domain_name, const char *code, const char *label)
     * }
     */
    public static MethodHandle ofgdb_add_coded_value$handle() {
        return ofgdb_add_coded_value.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_add_coded_value(uint64_t db_handle, const char *domain_name, const char *code, const char *label)
     * }
     */
    public static MemorySegment ofgdb_add_coded_value$address() {
        return ofgdb_add_coded_value.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_add_coded_value(uint64_t db_handle, const char *domain_name, const char *code, const char *label)
     * }
     */
    public static int ofgdb_add_coded_value(long db_handle, MemorySegment domain_name, MemorySegment code, MemorySegment label) {
        var mh$ = ofgdb_add_coded_value.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_add_coded_value", db_handle, domain_name, code, label);
            }
            return (int)mh$.invokeExact(db_handle, domain_name, code, label);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_assign_domain_to_field {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_assign_domain_to_field").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_assign_domain_to_field"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_assign_domain_to_field(uint64_t db_handle, const char *table_name, const char *column_name, const char *domain_name)
     * }
     */
    public static FunctionDescriptor ofgdb_assign_domain_to_field$descriptor() {
        return ofgdb_assign_domain_to_field.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_assign_domain_to_field(uint64_t db_handle, const char *table_name, const char *column_name, const char *domain_name)
     * }
     */
    public static MethodHandle ofgdb_assign_domain_to_field$handle() {
        return ofgdb_assign_domain_to_field.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_assign_domain_to_field(uint64_t db_handle, const char *table_name, const char *column_name, const char *domain_name)
     * }
     */
    public static MemorySegment ofgdb_assign_domain_to_field$address() {
        return ofgdb_assign_domain_to_field.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_assign_domain_to_field(uint64_t db_handle, const char *table_name, const char *column_name, const char *domain_name)
     * }
     */
    public static int ofgdb_assign_domain_to_field(long db_handle, MemorySegment table_name, MemorySegment column_name, MemorySegment domain_name) {
        var mh$ = ofgdb_assign_domain_to_field.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_assign_domain_to_field", db_handle, table_name, column_name, domain_name);
            }
            return (int)mh$.invokeExact(db_handle, table_name, column_name, domain_name);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_list_relationships {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_list_relationships").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_list_relationships"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_list_relationships(uint64_t db_handle, uint64_t *cursor_handle)
     * }
     */
    public static FunctionDescriptor ofgdb_list_relationships$descriptor() {
        return ofgdb_list_relationships.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_list_relationships(uint64_t db_handle, uint64_t *cursor_handle)
     * }
     */
    public static MethodHandle ofgdb_list_relationships$handle() {
        return ofgdb_list_relationships.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_list_relationships(uint64_t db_handle, uint64_t *cursor_handle)
     * }
     */
    public static MemorySegment ofgdb_list_relationships$address() {
        return ofgdb_list_relationships.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_list_relationships(uint64_t db_handle, uint64_t *cursor_handle)
     * }
     */
    public static int ofgdb_list_relationships(long db_handle, MemorySegment cursor_handle) {
        var mh$ = ofgdb_list_relationships.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_list_relationships", db_handle, cursor_handle);
            }
            return (int)mh$.invokeExact(db_handle, cursor_handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_create_relationship_class {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_create_relationship_class").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_create_relationship_class"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_create_relationship_class(uint64_t db_handle, const char *name, const char *origin_table, const char *destination_table, const char *origin_pk, const char *origin_fk, const char *forward_label, const char *backward_label, const char *cardinality, int32_t is_composite, int32_t is_attributed)
     * }
     */
    public static FunctionDescriptor ofgdb_create_relationship_class$descriptor() {
        return ofgdb_create_relationship_class.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_create_relationship_class(uint64_t db_handle, const char *name, const char *origin_table, const char *destination_table, const char *origin_pk, const char *origin_fk, const char *forward_label, const char *backward_label, const char *cardinality, int32_t is_composite, int32_t is_attributed)
     * }
     */
    public static MethodHandle ofgdb_create_relationship_class$handle() {
        return ofgdb_create_relationship_class.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_create_relationship_class(uint64_t db_handle, const char *name, const char *origin_table, const char *destination_table, const char *origin_pk, const char *origin_fk, const char *forward_label, const char *backward_label, const char *cardinality, int32_t is_composite, int32_t is_attributed)
     * }
     */
    public static MemorySegment ofgdb_create_relationship_class$address() {
        return ofgdb_create_relationship_class.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_create_relationship_class(uint64_t db_handle, const char *name, const char *origin_table, const char *destination_table, const char *origin_pk, const char *origin_fk, const char *forward_label, const char *backward_label, const char *cardinality, int32_t is_composite, int32_t is_attributed)
     * }
     */
    public static int ofgdb_create_relationship_class(long db_handle, MemorySegment name, MemorySegment origin_table, MemorySegment destination_table, MemorySegment origin_pk, MemorySegment origin_fk, MemorySegment forward_label, MemorySegment backward_label, MemorySegment cardinality, int is_composite, int is_attributed) {
        var mh$ = ofgdb_create_relationship_class.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_create_relationship_class", db_handle, name, origin_table, destination_table, origin_pk, origin_fk, forward_label, backward_label, cardinality, is_composite, is_attributed);
            }
            return (int)mh$.invokeExact(db_handle, name, origin_table, destination_table, origin_pk, origin_fk, forward_label, backward_label, cardinality, is_composite, is_attributed);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_list_domains_text {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_list_domains_text").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_list_domains_text"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_list_domains_text(uint64_t db_handle, char **out_text)
     * }
     */
    public static FunctionDescriptor ofgdb_list_domains_text$descriptor() {
        return ofgdb_list_domains_text.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_list_domains_text(uint64_t db_handle, char **out_text)
     * }
     */
    public static MethodHandle ofgdb_list_domains_text$handle() {
        return ofgdb_list_domains_text.HANDLE;
    }
